--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -1,15 +1,13 @@
 <%= stylesheet_link_tag 'vinyl_index' %>
 
-<% if Collection.exists?(id: params["id"]) %>
-  <% collection = Collection.find_by(id: params["id"]) %>
 
   <br>
   <h1 class="text-center">Collections</h1>
-  <h3 class="text-center"><%= collection.name %> </h3>
+  <h3 class="text-center"><%= @collection.name %> </h3>
 
   <div class="row">
 
-    <% if collection.collection_records.empty? %>
+    <% if @collection.collection_records.empty? %>
       <div class="col-sm-4 offset-sm-4 text-center">
         <br>
         Your collection looks pretty bare. Browse and add vinyls 
@@ -18,7 +16,7 @@
     <% end %>
 
     <!-- Display vinyls in the order they were added to collection -->
-    <% collection.collection_records.order('created_at').each do |record| %>
+    <% @collection.collection_records.order('created_at').each do |record| %>
         <% vinyl = Vinyl.find_by(id: record.vinyl_id) %>
 
       <div class="col-sm-3 my-3 text-center">
@@ -37,19 +35,16 @@
           <%= link_to vinyl.artist.name, "/artists/#{vinyl.artist_id}" %>
       	</p>
 
+          <!-- Delete from collection -->
         <p>
-          <!-- Can add to collections, edit/delete vinyls only if user is logged in -->
-
           <div class="row">
-
             <div class="col-sm-8 offset-sm-2 text-center" style="padding:0">
               <%= form_tag "/vinyls/remove-from-collections" do %>  
-                <input type="hidden" value="<%= collection.id %>" name="collection_id">
+                <input type="hidden" value="<%= @collection.id %>" name="collection_id">
                 <input type="hidden" value="<%= vinyl.id %>" name="vinyl_id">
               <%= submit_tag "Remove", :class => "btn btn-outline-primary"%>
               <% end %>
             </div>
-
           </div>
         </p>
         
@@ -57,13 +52,6 @@
 
     <% end %>
   </div>
-
-
-<% else %> 
-  <p class="text-center">
-    Collection doesn't exist.
-  </p>
-<% end %>
 
 
 
