Remind users to login or sign up to add, edit, delete vinyls/artists.

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,7 +1,12 @@
 <%= stylesheet_link_tag 'vinyl_index' %>
 
 <h1 class="text-center">Artists</h1>
-<br>
+
+<% if session[:user_id].nil? %>
+<p class="text-center"><a href="/sessions/new">Log in</a> or 
+<a href="/users/new">sign up</a> to add, edit, and delete artists.</p>
+<% end %>
+
 
 <div class="container">
   <div class="row">
