--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -20,7 +20,7 @@
     <thead class="thead-dark">
       <tr>
         <th>Collection</th>
-        <th>Vinyls</th>
+        <th>Sneak Peek of Included Vinyls</th>
         <th>Actions</th>
       </tr>
     </thead>
