Update disclaimer about images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,6 +121,16 @@
 
     </div>
 
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-10 offset-1 text-center">
+          <p style="font-size:70%"><i>
+          * All the images come from other sources such as Discogs. Opening the album cover images in a new tab will redirect you to the image source URL.
+          </i></p>
+        </div>
+      </div>
+    </div>
+
    
   </body>
 </html>
