--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -10,8 +10,10 @@
     
     <div class="row">
       <div class="col-sm-6 offset-3 text-center">
-    <%= image_tag @vinyl.image_url, :class => "img-fluid" %>
-      </div>
+        <% image_url = (@vinyl.image_url.present? ? @vinyl.image_url : '/assets/na.png') %>
+        <img src="<%= image_url %>" class="img-fluid">
+<!--         <img src="<%= @vinyl.image_url %>" class="img-fluid"></a>
+ -->      </div>
     </div>
 
     <p>
@@ -95,4 +97,5 @@
 
 </div>
 
+<br>
 
