Update image_url validation message

--- a/app/views/vinyls/index.html.erb
+++ b/app/views/vinyls/index.html.erb
@@ -26,7 +26,7 @@
   <% @vinyls.each do |vinyl| %>
 
     <div class="col-sm-3 my-3 text-center">
-      <% image_url = (vinyl.image_url.present? ? vinyl.image_url : '/assets/na.png') %>
+      <% image_url = (vinyl.image_url.present? ? vinyl.image_url : 'na.png') %>
 
       <div class="album_container">
       	<div class="overlay">
