Update rendering of default image

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -11,7 +11,7 @@
 
       <div class="col-sm-3 my-3 text-center">
 
-        <% image_url = (vinyl.image_url.present? ? vinyl.image_url : '/assets/na.png') %>
+        <% image_url = (vinyl.image_url.present? ? vinyl.image_url : 'na.png') %>
 
 
       <div class="album_container">
