--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -21,7 +21,7 @@
 
       <div class="col-sm-3 my-3 text-center">
 
-        <% image_url = (vinyl.image_url.present? ? vinyl.image_url : '/assets/na.png') %>
+        <% image_url = (vinyl.image_url.present? ? vinyl.image_url : 'na.png') %>
 
       <div class="album_container">
       	<div class="overlay">
