--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -10,7 +10,7 @@
     
     <div class="row">
       <div class="col-sm-6 offset-3 text-center">
-        <% image_url = (@vinyl.image_url.present? ? @vinyl.image_url : '/assets/na.png') %>
+        <% image_url = (@vinyl.image_url.present? ? @vinyl.image_url : 'na.png') %>
         <img src="<%= image_url %>" class="img-fluid">
 <!--         <img src="<%= @vinyl.image_url %>" class="img-fluid"></a>
  -->      </div>
