Clarify album art input as url, make carousel height fixed

--- a/app/views/vinyls/edit.html.erb
+++ b/app/views/vinyls/edit.html.erb
@@ -15,7 +15,7 @@
       <p>Title: <input name="title" type="text" autofocus class="form-control" value="<%= vinyl.title %>"></p>
       <p>Year: <input name="year" type="number" class="form-control" min="1800" max=<%= Date.today.year %> step="1" value="<%= vinyl.year %>"></p> 
       <p>Runtime (minutes): <input name="runtime" type="number" class="form-control" min="1" max="500" step="1" value="<%= vinyl.runtime %>"></p>
-      <p>Album Art:
+      <p>Album Art (URL to image):
         <input name="image_url" type="text" class="form-control" value="<%= vinyl.image_url %>" pattern="https?://.+\.(gif|jpg|jpeg|tiff|png)" title="Must start with http:// or https:// and have type of gif, jpg, jpeg, png, or tiff"></p>
 
       <p>Artist:<br>
